tests/syntax_errors/nested_let_out_of_scope.tjs
"use strict";

var { _, eq, ok, async } = require('../common.js');

module.exports = function(callback){
   await{ 
      await{
         await{ 
            async.echo(defer(let one), 1);
         }
      }
   }

   if(one === 1){
      throw("never gets here");
   }

   return callback();
};

